--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  badWolf-v1.2.2.tar.bz2: 17797705123510bac7dd2ea1952daa4040110536
+  badwolf-1.3.0.tar.gz: b040392a8554fbe52755b52109b3164b3db399d0
